src/cmd/internal/gc/y.output

state 0
	$accept: .file $end 
	$$4: .    (4)

	.  reduce 4 (src line 149)

	file  goto 1
	loadsys  goto 2
	$$4  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  loadsys.package imports xdcl_list 
	package: .    (2)

	LPACKAGE  shift 5
	.  reduce 2 (src line 132)

	package  goto 4

state 3
	loadsys:  $$4.import_package import_there 

	LPACKAGE  shift 7
	.  error

	import_package  goto 6

state 4
	file:  loadsys package.imports xdcl_list 
	imports: .    (6)

	.  reduce 6 (src line 166)

	imports  goto 8

state 5
	package:  LPACKAGE.sym ';' 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 9
	hidden_importsym  goto 11

state 6
	loadsys:  $$4 import_package.import_there 
	$$21: .    (21)

	.  reduce 21 (src line 273)

	import_there  goto 14
	$$21  goto 15

state 7
	import_package:  LPACKAGE.LNAME import_safety ';' 

	LNAME  shift 16
	.  error


state 8
	file:  loadsys package imports.xdcl_list 
	imports:  imports.import ';' 
	xdcl_list: .    (218)

	LIMPORT  shift 19
	.  reduce 218 (src line 1508)

	xdcl_list  goto 17
	import  goto 18

state 9
	package:  LPACKAGE sym.';' 

	';'  shift 20
	.  error


state 10
	sym:  LNAME.    (157)

	.  reduce 157 (src line 1114)


state 11
	sym:  hidden_importsym.    (158)

	.  reduce 158 (src line 1123)


state 12
	sym:  '?'.    (159)

	.  reduce 159 (src line 1124)


state 13
	hidden_importsym:  '@'.LLITERAL '.' LNAME 
	hidden_importsym:  '@'.LLITERAL '.' '?' 

	LLITERAL  shift 21
	.  error


state 14
	loadsys:  $$4 import_package import_there.    (5)

	.  reduce 5 (src line 160)


state 15
	import_there:  $$21.hidden_import_list '$' '$' 
	hidden_import_list: .    (344)

	.  reduce 344 (src line 2210)

	hidden_import_list  goto 22

state 16
	import_package:  LPACKAGE LNAME.import_safety ';' 
	import_safety: .    (19)

	LNAME  shift 24
	.  reduce 19 (src line 265)

	import_safety  goto 23

state 17
	file:  loadsys package imports xdcl_list.    (1)
	xdcl_list:  xdcl_list.xdcl ';' 
	xdcl: .    (23)

	$end  reduce 1 (src line 123)
	error  shift 29
	LLITERAL  shift 68
	LBREAK  shift 41
	LCHAN  shift 78
	LCONST  shift 47
	LCONTINUE  shift 42
	LDEFER  shift 44
	LFALL  shift 40
	LFOR  shift 50
	LFUNC  shift 33
	LGO  shift 43
	LGOTO  shift 45
	LIF  shift 53
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LRETURN  shift 46
	LSELECT  shift 52
	LSTRUCT  shift 82
	LSWITCH  shift 51
	LTYPE  shift 32
	LVAR  shift 30
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	';'  reduce 23 (src line 286)
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 56
	expr  goto 48
	fnliteral  goto 73
	for_stmt  goto 35
	if_stmt  goto 38
	non_dcl_stmt  goto 28
	labelname  goto 39
	name  goto 69
	new_name  goto 54
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	select_stmt  goto 37
	simple_stmt  goto 34
	switch_stmt  goto 36
	uexpr  goto 55
	xfndcl  goto 27
	xdcl  goto 25
	expr_list  goto 49
	common_dcl  goto 26
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	lconst  goto 31
	fnlitdcl  goto 76

state 18
	imports:  imports import.';' 

	';'  shift 84
	.  error


state 19
	import:  LIMPORT.import_stmt 
	import:  LIMPORT.'(' import_stmt_list osemi ')' 
	import:  LIMPORT.'(' ')' 

	LLITERAL  shift 88
	LNAME  shift 10
	'('  shift 86
	'.'  shift 90
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 87
	sym  goto 89
	hidden_importsym  goto 11
	import_stmt  goto 85

state 20
	package:  LPACKAGE sym ';'.    (3)

	.  reduce 3 (src line 139)


state 21
	hidden_importsym:  '@' LLITERAL.'.' LNAME 
	hidden_importsym:  '@' LLITERAL.'.' '?' 

	'.'  shift 91
	.  error


state 22
	import_there:  $$21 hidden_import_list.'$' '$' 
	hidden_import_list:  hidden_import_list.hidden_import 

	LCONST  shift 96
	LFUNC  shift 98
	LIMPORT  shift 94
	LTYPE  shift 97
	LVAR  shift 95
	'$'  shift 92
	.  error

	hidden_import  goto 93

state 23
	import_package:  LPACKAGE LNAME import_safety.';' 

	';'  shift 99
	.  error


state 24
	import_safety:  LNAME.    (20)

	.  reduce 20 (src line 266)


state 25
	xdcl_list:  xdcl_list xdcl.';' 

	';'  shift 100
	.  error


state 26
	xdcl:  common_dcl.    (24)

	.  reduce 24 (src line 291)


state 27
	xdcl:  xfndcl.    (25)

	.  reduce 25 (src line 292)


state 28
	xdcl:  non_dcl_stmt.    (26)

	.  reduce 26 (src line 296)


state 29
	xdcl:  error.    (27)

	.  reduce 27 (src line 301)


state 30
	common_dcl:  LVAR.vardcl 
	common_dcl:  LVAR.'(' vardcl_list osemi ')' 
	common_dcl:  LVAR.'(' ')' 

	LNAME  shift 10
	'('  shift 102
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 103
	vardcl  goto 101
	hidden_importsym  goto 11

state 31
	common_dcl:  lconst.constdcl 
	common_dcl:  lconst.'(' constdcl osemi ')' 
	common_dcl:  lconst.'(' constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst.'(' ')' 

	LNAME  shift 10
	'('  shift 107
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 108
	constdcl  goto 106
	hidden_importsym  goto 11

state 32
	common_dcl:  LTYPE.typedcl 
	common_dcl:  LTYPE.'(' typedcl_list osemi ')' 
	common_dcl:  LTYPE.'(' ')' 

	LNAME  shift 10
	'('  shift 110
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 112
	typedclname  goto 111
	typedcl  goto 109
	hidden_importsym  goto 11

state 33
	xfndcl:  LFUNC.fndcl fnbody 
	fntype:  LFUNC.'(' oarg_type_list_ocomma ')' fnres 

	LNAME  shift 10
	'('  shift 114
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 115
	fndcl  goto 113
	hidden_importsym  goto 11

state 34
	non_dcl_stmt:  simple_stmt.    (256)

	.  reduce 256 (src line 1735)


state 35
	non_dcl_stmt:  for_stmt.    (257)

	.  reduce 257 (src line 1737)


state 36
	non_dcl_stmt:  switch_stmt.    (258)

	.  reduce 258 (src line 1738)


state 37
	non_dcl_stmt:  select_stmt.    (259)

	.  reduce 259 (src line 1739)


state 38
	non_dcl_stmt:  if_stmt.    (260)

	.  reduce 260 (src line 1740)


state 39
	non_dcl_stmt:  labelname.':' $$261 stmt 

	':'  shift 116
	.  error


state 40
	non_dcl_stmt:  LFALL.    (263)

	.  reduce 263 (src line 1757)


state 41
	non_dcl_stmt:  LBREAK.onew_name 
	onew_name: .    (155)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 155 (src line 1108)

	sym  goto 119
	new_name  goto 118
	onew_name  goto 117
	hidden_importsym  goto 11

state 42
	non_dcl_stmt:  LCONTINUE.onew_name 
	onew_name: .    (155)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 155 (src line 1108)

	sym  goto 119
	new_name  goto 118
	onew_name  goto 120
	hidden_importsym  goto 11

state 43
	non_dcl_stmt:  LGO.pseudocall 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	'('  shift 67
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 122
	pexpr_no_paren  goto 66
	pseudocall  goto 121
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 44
	non_dcl_stmt:  LDEFER.pseudocall 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	'('  shift 67
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 122
	pexpr_no_paren  goto 66
	pseudocall  goto 125
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 45
	non_dcl_stmt:  LGOTO.new_name 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 119
	new_name  goto 126
	hidden_importsym  goto 11

state 46
	non_dcl_stmt:  LRETURN.oexpr_list 
	oexpr_list: .    (292)

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  reduce 292 (src line 1906)

	sym  goto 123
	expr  goto 129
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 55
	expr_list  goto 128
	oexpr_list  goto 127
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 47
	lconst:  LCONST.    (38)

	.  reduce 38 (src line 355)


state 48
	simple_stmt:  expr.    (49)
	simple_stmt:  expr.LASOP expr 
	simple_stmt:  expr.LINC 
	simple_stmt:  expr.LDEC 
	expr:  expr.LOROR expr 
	expr:  expr.LANDAND expr 
	expr:  expr.LEQ expr 
	expr:  expr.LNE expr 
	expr:  expr.LLT expr 
	expr:  expr.LLE expr 
	expr:  expr.LGE expr 
	expr:  expr.LGT expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.LANDNOT expr 
	expr:  expr.LLSH expr 
	expr:  expr.LRSH expr 
	expr:  expr.LCOMM expr 
	expr_list:  expr.    (276)

	LASOP  shift 130
	LCOLAS  reduce 276 (src line 1841)
	LANDAND  shift 134
	LANDNOT  shift 149
	LCOMM  shift 152
	LDEC  shift 132
	LEQ  shift 135
	LGE  shift 139
	LGT  shift 140
	LINC  shift 131
	LLE  shift 138
	LLSH  shift 150
	LLT  shift 137
	LNE  shift 136
	LOROR  shift 133
	LRSH  shift 151
	'+'  shift 141
	'-'  shift 142
	'|'  shift 143
	'^'  shift 144
	'*'  shift 145
	'/'  shift 146
	'%'  shift 147
	'&'  shift 148
	'='  reduce 276 (src line 1841)
	','  reduce 276 (src line 1841)
	.  reduce 49 (src line 411)


state 49
	simple_stmt:  expr_list.'=' expr_list 
	simple_stmt:  expr_list.LCOLAS expr_list 
	expr_list:  expr_list.',' expr 

	LCOLAS  shift 154
	'='  shift 153
	','  shift 155
	.  error


state 50
	for_stmt:  LFOR.$$74 for_body 
	$$74: .    (74)

	.  reduce 74 (src line 660)

	$$74  goto 156

state 51
	switch_stmt:  LSWITCH.$$88 if_header $$89 LBODY caseblock_list '}' 
	$$88: .    (88)

	.  reduce 88 (src line 755)

	$$88  goto 157

state 52
	select_stmt:  LSELECT.$$91 LBODY caseblock_list '}' 
	$$91: .    (91)

	.  reduce 91 (src line 778)

	$$91  goto 158

state 53
	if_stmt:  LIF.$$78 if_header $$79 loop_body $$80 elseif_list else 
	$$78: .    (78)

	.  reduce 78 (src line 689)

	$$78  goto 159

state 54
	labelname:  new_name.    (163)

	.  reduce 163 (src line 1168)


state 55
	expr:  uexpr.    (93)

	.  reduce 93 (src line 794)


state 56
	new_name:  sym.    (153)
	name:  sym.    (162)

	':'  reduce 153 (src line 1092)
	.  reduce 162 (src line 1159)


state 57
	uexpr:  pexpr.    (114)
	pseudocall:  pexpr.'(' ')' 
	pseudocall:  pexpr.'(' expr_or_type_list ocomma ')' 
	pseudocall:  pexpr.'(' expr_or_type_list LDDD ocomma ')' 
	pexpr_no_paren:  pexpr.'.' sym 
	pexpr_no_paren:  pexpr.'.' '(' expr_or_type ')' 
	pexpr_no_paren:  pexpr.'.' '(' LTYPE ')' 
	pexpr_no_paren:  pexpr.'[' expr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ':' oexpr ']' 

	'('  shift 160
	'.'  shift 161
	'['  shift 162
	.  reduce 114 (src line 878)


state 58
	uexpr:  '*'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 163
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 59
	uexpr:  '&'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 164
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 60
	uexpr:  '+'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 165
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 61
	uexpr:  '-'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 166
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 62
	uexpr:  '!'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 167
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 63
	uexpr:  '~'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 168
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 64
	uexpr:  '^'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 169
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 65
	uexpr:  LCOMM.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 170
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 66
	pexpr_no_paren:  pexpr_no_paren.'{' start_complit braced_keyval_list '}' 
	pexpr:  pexpr_no_paren.    (146)

	'{'  shift 171
	.  reduce 146 (src line 1055)


state 67
	pexpr_no_paren:  '('.expr_or_type ')' '{' start_complit braced_keyval_list '}' 
	pexpr:  '('.expr_or_type ')' 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 179
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 178
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	expr  goto 173
	expr_or_type  goto 172
	fnliteral  goto 73
	name  goto 69
	non_expr_type  goto 174
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 55
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	recvchantype  goto 175
	othertype  goto 177
	fntype  goto 176
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 68
	pexpr_no_paren:  LLITERAL.    (126)

	.  reduce 126 (src line 942)


state 69
	pexpr_no_paren:  name.    (127)

	.  reduce 127 (src line 947)


state 70
	pexpr_no_paren:  pseudocall.    (134)

	.  reduce 134 (src line 985)


state 71
	pexpr_no_paren:  convtype.'(' expr ocomma ')' 

	'('  shift 180
	.  error


state 72
	pexpr_no_paren:  comptype.lbrace start_complit braced_keyval_list '}' 

	LBODY  shift 182
	'{'  shift 183
	.  error

	lbrace  goto 181

state 73
	pexpr_no_paren:  fnliteral.    (139)

	.  reduce 139 (src line 1012)


state 74
	convtype:  fntype.    (181)
	fnlitdcl:  fntype.    (215)

	'('  reduce 181 (src line 1221)
	.  reduce 215 (src line 1485)


state 75
	convtype:  othertype.    (182)
	comptype:  othertype.    (183)

	'('  reduce 182 (src line 1223)
	.  reduce 183 (src line 1225)


state 76
	fnliteral:  fnlitdcl.lbrace stmt_list '}' 
	fnliteral:  fnlitdcl.error 

	error  shift 185
	LBODY  shift 182
	'{'  shift 183
	.  error

	lbrace  goto 184

state 77
	othertype:  '['.oexpr ']' ntype 
	othertype:  '['.LDDD ']' ntype 
	oexpr: .    (290)

	LLITERAL  shift 68
	LCHAN  shift 78
	LDDD  shift 187
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  reduce 290 (src line 1900)

	sym  goto 123
	expr  goto 188
	fnliteral  goto 73
	name  goto 69
	oexpr  goto 186
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 55
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 78
	othertype:  LCHAN.non_recvchantype 
	othertype:  LCHAN.LCOMM ntype 

	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 190
	'*'  shift 196
	'('  shift 195
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 123
	dotname  goto 194
	name  goto 197
	interfacetype  goto 81
	structtype  goto 80
	ptrtype  goto 193
	non_recvchantype  goto 189
	othertype  goto 192
	fntype  goto 191
	hidden_importsym  goto 11

state 79
	othertype:  LMAP.'[' ntype ']' ntype 

	'['  shift 198
	.  error


state 80
	othertype:  structtype.    (196)

	.  reduce 196 (src line 1273)


state 81
	othertype:  interfacetype.    (197)

	.  reduce 197 (src line 1274)


state 82
	structtype:  LSTRUCT.lbrace structdcl_list osemi '}' 
	structtype:  LSTRUCT.lbrace '}' 

	LBODY  shift 182
	'{'  shift 183
	.  error

	lbrace  goto 199

state 83
	interfacetype:  LINTERFACE.lbrace interfacedcl_list osemi '}' 
	interfacetype:  LINTERFACE.lbrace '}' 

	LBODY  shift 182
	'{'  shift 183
	.  error

	lbrace  goto 200

state 84
	imports:  imports import ';'.    (7)

	.  reduce 7 (src line 167)


state 85
	import:  LIMPORT import_stmt.    (8)

	.  reduce 8 (src line 169)


state 86
	import:  LIMPORT '('.import_stmt_list osemi ')' 
	import:  LIMPORT '('.')' 

	LLITERAL  shift 88
	LNAME  shift 10
	')'  shift 202
	'.'  shift 90
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 87
	sym  goto 89
	hidden_importsym  goto 11
	import_stmt  goto 203
	import_stmt_list  goto 201

state 87
	import_stmt:  import_here.import_package import_there 
	import_stmt:  import_here.import_there 
	$$21: .    (21)

	LPACKAGE  shift 7
	.  reduce 21 (src line 273)

	import_package  goto 204
	import_there  goto 205
	$$21  goto 15

state 88
	import_here:  LLITERAL.    (15)

	.  reduce 15 (src line 225)


state 89
	import_here:  sym.LLITERAL 

	LLITERAL  shift 206
	.  error


state 90
	import_here:  '.'.LLITERAL 

	LLITERAL  shift 207
	.  error


state 91
	hidden_importsym:  '@' LLITERAL '.'.LNAME 
	hidden_importsym:  '@' LLITERAL '.'.'?' 

	LNAME  shift 208
	'?'  shift 209
	.  error


state 92
	import_there:  $$21 hidden_import_list '$'.'$' 

	'$'  shift 210
	.  error


state 93
	hidden_import_list:  hidden_import_list hidden_import.    (345)

	.  reduce 345 (src line 2211)


state 94
	hidden_import:  LIMPORT.LNAME LLITERAL ';' 

	LNAME  shift 211
	.  error


state 95
	hidden_import:  LVAR.hidden_pkg_importsym hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 213
	hidden_pkg_importsym  goto 212

state 96
	hidden_import:  LCONST.hidden_pkg_importsym '=' hidden_constant ';' 
	hidden_import:  LCONST.hidden_pkg_importsym hidden_type '=' hidden_constant ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 213
	hidden_pkg_importsym  goto 214

state 97
	hidden_import:  LTYPE.hidden_pkgtype hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 213
	hidden_pkg_importsym  goto 216
	hidden_pkgtype  goto 215

state 98
	hidden_import:  LFUNC.hidden_fndcl fnbody ';' 

	'('  shift 219
	'@'  shift 13
	.  error

	hidden_fndcl  goto 217
	hidden_importsym  goto 213
	hidden_pkg_importsym  goto 218

state 99
	import_package:  LPACKAGE LNAME import_safety ';'.    (18)

	.  reduce 18 (src line 248)


state 100
	xdcl_list:  xdcl_list xdcl ';'.    (219)

	.  reduce 219 (src line 1512)


state 101
	common_dcl:  LVAR vardcl.    (28)

	.  reduce 28 (src line 306)


state 102
	common_dcl:  LVAR '('.vardcl_list osemi ')' 
	common_dcl:  LVAR '('.')' 

	LNAME  shift 10
	')'  shift 221
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 103
	vardcl  goto 222
	vardcl_list  goto 220
	hidden_importsym  goto 11

state 103
	vardcl:  dcl_name_list.ntype 
	vardcl:  dcl_name_list.ntype '=' expr_list 
	vardcl:  dcl_name_list.'=' expr_list 
	dcl_name_list:  dcl_name_list.',' dcl_name 

	LCHAN  shift 78
	LFUNC  shift 124
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 232
	'*'  shift 196
	'('  shift 231
	'='  shift 224
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	','  shift 225
	.  error

	sym  goto 123
	ntype  goto 223
	dotname  goto 230
	name  goto 197
	interfacetype  goto 81
	structtype  goto 80
	ptrtype  goto 229
	recvchantype  goto 226
	othertype  goto 228
	fntype  goto 227
	hidden_importsym  goto 11

state 104
	dcl_name_list:  dcl_name.    (274)

	.  reduce 274 (src line 1831)


state 105
	dcl_name:  sym.    (154)

	.  reduce 154 (src line 1102)


state 106
	common_dcl:  lconst constdcl.    (31)

	.  reduce 31 (src line 319)


state 107
	common_dcl:  lconst '('.constdcl osemi ')' 
	common_dcl:  lconst '('.constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst '('.')' 

	LNAME  shift 10
	')'  shift 234
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 108
	constdcl  goto 233
	hidden_importsym  goto 11

state 108
	constdcl:  dcl_name_list.ntype '=' expr_list 
	constdcl:  dcl_name_list.'=' expr_list 
	dcl_name_list:  dcl_name_list.',' dcl_name 
